--- a/css/style.css
+++ b/css/style.css
@@ -1980,9 +1980,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
       margin-bottom: 0; } }
 
 .btn {
-  display: block;
-  width: 318%;
-  height: 600%;
+  display: inline-block;
   align-items: center;
   font-weight: 400;
   text-align: center;
