--- a/css/style.css
+++ b/css/style.css
@@ -44,11 +44,11 @@ html {
   font-family: sans-serif;
   line-height: 1.15;
   -webkit-text-size-adjust: 100%;
-  -ms-text-size-adjust: 100%;
+  text-size-adjust: 100%;
   -ms-overflow-style: scrollbar;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0); }
 
-@-ms-viewport {
+@viewport {
   width: device-width; }
 
 article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, section {
@@ -310,6 +310,18 @@ h1, h2, h3, h4, h5, h6,
 
 h1, .h1 {
   font-size: 2.5rem; }
+
+@media screen and (min-width: 401px){
+  h1.h1{
+    font-size: 80px;
+  }
+}
+
+@media screen and (max-width: 400px){
+  h1.h1{
+    font-size: 30px;
+  }
+}
 
 h2, .h2 {
   font-size: 2rem; }
